--- a/docs/03.administer/15.admin_guide/15.command_line.mdx
+++ b/docs/03.administer/15.admin_guide/15.command_line.mdx
@@ -120,7 +120,7 @@ yunohost user ssh list-keys <username>
 
 ## Security and SSH
 
-A more extensive discussion about security & SSH can be found on the [dedicated page](/security).
+A more extensive discussion about security & SSH can be found on the [dedicated page](/administer/tutorials/security).
 
 ## The command line
 
