--- a/docs/03.administer/15.admin_guide/20.users/20.users.mdx
+++ b/docs/03.administer/15.admin_guide/20.users/20.users.mdx
@@ -41,8 +41,8 @@ Finalize the user creation by clicking on the `Save` button.
 
 ## User groups and permissions
 
-See [this dedicated page](/groups_and_permissions).
+See [this dedicated page](/administer/admin_guide/users/groups_and_permissions).
 
 ## SSH access
 
-See [this dedicated page](/ssh).
+See [this dedicated page](/administer/admin_guide/command_line).
