--- a/docs/03.administer/15.admin_guide/25.domains/25.domains.mdx
+++ b/docs/03.administer/15.admin_guide/25.domains/25.domains.mdx
@@ -50,7 +50,7 @@ Having your own domain brings several advantages:
 
 However, you have to pay for it each year (about 15€/year ... depending on the TLD) and you have to do some extra configuration to [setup a correct DNS zone](/dns_config). Our diagnosis tool can trigger alert to help you to do this configuration.
 
-If you already have your own domain, you can simply click "I already have a domain name…". If you don't, in order to simplify and automate the DNS configuration, we suggest you to buy it from a [registrar whose API is supported by YunoHost](/providers/registrar).
+If you already have your own domain, you can simply click "I already have a domain name…". If you don't, in order to simplify and automate the DNS configuration, we suggest you to buy it from a [registrar whose API is supported by YunoHost](/install/providers/registrar/).
 
 ![Here a screenshot of the "Add domain" page where you can choose "I already have a domain name"](/img/webadmin_domain_owndomain.png)
 
@@ -96,4 +96,4 @@ If your domain has special, non-latin characters, it will be transformed by Yuno
 
 ## SSL/HTTPS certificates
 
-Another important aspect of domain configuration is the SSL/HTTPS certificate. YunoHost is integrated with Let's Encrypt, so once your server is correctly reachable from anybody on the internet through the domain name, the administrator can request a Let's Encrypt certificate. See the documentation about [certificates](/certificate) for more information.
+Another important aspect of domain configuration is the SSL/HTTPS certificate. YunoHost is integrated with Let's Encrypt, so once your server is correctly reachable from anybody on the internet through the domain name, the administrator can request a Let's Encrypt certificate. See the documentation about [certificates](/administer/admin_guide/domains/certificate) for more information.
