--- a/docs/03.administer/15.admin_guide/30.apps/30.apps.mdx
+++ b/docs/03.administer/15.admin_guide/30.apps/30.apps.mdx
@@ -173,10 +173,10 @@ It will:
 
 Applications must be packaged manually by application packagers/maintainers. Apps can be integrated with YunoHost to support upgrades, backup/restore and LDAP/SSO integration among other things.
 
-If you want to learn or contribute to app packaging, please check the [contributor documentation](/contributordoc).
+If you want to learn or contribute to app packaging, please check the [contributor documentation](/contribute/).
 
 ### Integration and quality levels
 
-Automated tests are being run regularly to test the integration and quality of all apps who were declared to be `working` by packagers. The result is a level between 0 and 8, whose meaning is detailed on [this page](/packaging_apps_levels). Some tests results may also be available [on this dashboard](https://dash.yunohost.org/appci/branch/stable).
+Automated tests are being run regularly to test the integration and quality of all apps who were declared to be `working` by packagers. The result is a level between 0 and 8, whose meaning is detailed on [this page](/contribute/packaging_apps/testing). Some tests results may also be available [on this dashboard](https://dash.yunohost.org/appci/branch/stable).
 
 By default, only applications of sufficient quality are offered. When the quality of an application drops and until the problem is reolved, the app is hidden from the catalog to prevent its installation and its upgrades are put on hold.
