--- a/docs/03.administer/15.admin_guide/55.upgrade/12.bullseye_bookworm/05.issues_faq/05.issues_faq.md
+++ b/docs/03.administer/15.admin_guide/55.upgrade/12.bullseye_bookworm/05.issues_faq/05.issues_faq.md
@@ -4,7 +4,7 @@ title: Migration isues FAQ
 
 This page lists all the known issues encountered after a migration from YunoHost 11 to 12.
 
-If the suggested solutions don't work, please [ask for help](/help).
+If the suggested solutions don't work, please [ask for help](/community/help).
 
 ## Python apps
 
