--- a/docs/03.administer/15.admin_guide/45.email.mdx
+++ b/docs/03.administer/15.admin_guide/45.email.mdx
@@ -15,14 +15,14 @@ Email is a complicated ecosystem and quite a few details can prevent it from wor
 
 To validate your setup:
 
-- if you are self-hosting at home and not using a VPN, ensure [your ISP won't block port 25](/isp) ;
+- if you are self-hosting at home and not using a VPN, ensure [your ISP won't block port 25](/install/providers/isp/) ;
 - route ports according to [this documentation](/isp_box_config) ;
 - carefully configure mail DNS records according to [this documentation](/dns_config) ;
 - test your configuration using the diagnostic features (<HighlightWebAdmin/> → <HighlightDiagnosis/> → <Highlight no_break={true} color='grey'><FAIcon icon="fa-envelope"/> Email</Highlight> ). You can also use [mail-tester.com](https://mail-tester.com), a score of at least 8~9/10 is a reasonnable goal <small>(be careful : only 3 tests per domain per day are allowed)</small>
 
 ## Email clients
 
-To interact with the email sever (read and send emails), you can either install a webclient such as Roundcube or Rainloop on your server - or configure a desktop/mobile client as described in [this page](/email_configure_client).
+To interact with the email sever (read and send emails), you can either install a webclient such as Roundcube or Rainloop on your server - or configure a desktop/mobile client as described in [this page](/user_guide/email_configure_client).
 
 Desktop and mobile clients have the advantage of copying your emails to the device, allowing offline viewing and relative protection against possible hardware failures of your server.
 
@@ -32,7 +32,7 @@ Mail aliases and forwards can be configured for each users. For instance, the fi
 
 Another feature which few people know about is the use of suffixes beginning with "+". For example, emails sent to `johndoe+booking@the.domain.tld` will automatically land in the `booking` dir (lowercase) of John Doe's mailbox or in John Doe's inbox if `booking` directory doesn't exist . It is a practical technique for example to provide an e-mail address to a website, then easily sort (via automatic filters) the mail coming from this website.
 
-Groups also can use alias features, by default the group `admins` have `root@<domain.tld>` or `webmaster@<domain.tld>`. [More information to use-it with the dedicated page](/groups_and_permissions#config-alias-group).
+Groups also can use alias features, by default the group `admins` have `root@<domain.tld>` or `webmaster@<domain.tld>`. [More information to use-it with the dedicated page](/administer/admin_guide/users/groups_and_permissions#config-alias-group).
 
 ## What happens if my server becomes unavailable?
 
@@ -42,12 +42,12 @@ If your server becomes unavailable, emails sent to your server will stay in a pe
 
 It is possible that the emails sent from your YunoHost instance are considered as spam by the big email services.
 Is it possible that the IP address from your server have been previously been used to sent spam or that these email services consider your server as a spam sender.
-To ensure that your servers’ IP address isn't on these blacklists and to remove it from them, follow this [link](/blacklist_forms).
+To ensure that your servers’ IP address isn't on these blacklists and to remove it from them, follow this [link](/administer/troubleshooting/blacklist_forms).
 
 ## Migrating email from an email provider to a YunoHost instance
 
-See [this page](/email_migration).
+See [this page](/user_guide/email_migration).
 
 ## Configuring SMTP relay
 
-See [this page](/email_configure_relay).
+See [this page](/administer/tutorials/email_configure_relay).
