--- a/docs/03.administer/15.admin_guide/55.upgrade/11.buster_bullseye_migration.md
+++ b/docs/03.administer/15.admin_guide/55.upgrade/11.buster_bullseye_migration.md
@@ -8,9 +8,9 @@ This page is dedicated to help you migrating an instance from YunoHost 4.4.x (ru
 
 - The YunoHost team did its best to make sure that the migration is as smooth as possible and was tested over the course of several months in several cases.
 
-- With that said, please be aware that this is a delicate operation. System administration is a complicated topic and covering every particular case is quite hard. Therefore, if you host critical data and services, please [make backups](/backup). And in any case, be patient and attentive during the migration.
+- With that said, please be aware that this is a delicate operation. System administration is a complicated topic and covering every particular case is quite hard. Therefore, if you host critical data and services, please [make backups](/category/backups). And in any case, be patient and attentive during the migration.
 
-- Please don't rush into thinking that you should need to reinstall your system from scratch thinking it would be "simpler" (sigh). (A common attitude is to be willing to reinstall a server at the slightest complication...). Instead, if you happen to run into issues, we encourage you to try to investigate and understand what's going on and [reach for help on the chat and the forum](/help).
+- Please don't rush into thinking that you should need to reinstall your system from scratch thinking it would be "simpler" (sigh). (A common attitude is to be willing to reinstall a server at the slightest complication...). Instead, if you happen to run into issues, we encourage you to try to investigate and understand what's going on and [reach for help on the chat and the forum](/community/help).
 
 - **You should watch the known issues at the bottom of this page, to be sure your migrations will work properly.**
 
@@ -40,7 +40,7 @@ Note that even if you close the webadmin page for some reason, the migration wil
 
 ### If the migration crashed / failed at some point
 
-If the migration failed at some point, it should be possible to relaunch it. If it still doesn't work, you can try to [get help](/help) (please provide the corresponding messages or whatever makes you say that it's not working).
+If the migration failed at some point, it should be possible to relaunch it. If it still doesn't work, you can try to [get help](/community/help) (please provide the corresponding messages or whatever makes you say that it's not working).
 
 ## What to do after the upgrade
 
