--- a/docs/03.administer/15.admin_guide/55.upgrade/12.bullseye_bookworm/12.bullseye_bookworm.md
+++ b/docs/03.administer/15.admin_guide/55.upgrade/12.bullseye_bookworm/12.bullseye_bookworm.md
@@ -8,9 +8,9 @@ This page is dedicated to help you migrating an instance from YunoHost 11.x (run
 
 - The YunoHost team did its best to make sure that the migration is as smooth as possible and was tested over the course of several months in several cases.
 
-- Please [backup your data and server](/backup)! This migration is a complex operation and covering every pitfall is quite hard. And in any case, be patient and attentive during the migration.
+- Please [backup your data and server](/category/backups)! This migration is a complex operation and covering every pitfall is quite hard. And in any case, be patient and attentive during the migration.
 
-- Please don't rush into thinking that you should need to reinstall your system from scratch thinking it would be "simpler" (sigh). (A common attitude is to be willing to reinstall a server at the slightest complication...). Instead, if you happen to run into issues, we encourage you to try to investigate and understand what's going on and [reach for help on the chat and the forum](/help).
+- Please don't rush into thinking that you should need to reinstall your system from scratch thinking it would be "simpler" (sigh). (A common attitude is to be willing to reinstall a server at the slightest complication...). Instead, if you happen to run into issues, we encourage you to try to investigate and understand what's going on and [reach for help on the chat and the forum](/community/help).
 
 - **You should watch the known issues at the bottom of this page, to be sure your migrations will work properly.**
 
@@ -44,7 +44,7 @@ The logs will be shown in the message bar (you can hover it to see the whole his
 
 ### If the migration crashed / failed at some point
 
-If the migration failed at some point, it should be possible to relaunch it. If it still doesn't work, you can try to [get help](/help) (please provide the corresponding messages or whatever makes you say that it's not working).
+If the migration failed at some point, it should be possible to relaunch it. If it still doesn't work, you can try to [get help](/community/help) (please provide the corresponding messages or whatever makes you say that it's not working).
 
 ## What to do after the upgrade
 
@@ -77,4 +77,4 @@ yunohost app upgrade --force APP_NAME
 
 ## Current known issues after the migration
 
-Please check the [issues FAQ](/bookworm_migration_issues_faq).
+Please check the [issues FAQ](/administer/admin_guide/upgrade/bullseye_bookworm/issues_faq/).
