fix broken links (backup)

--- a/docs/03.administer/20.backups/index.mdx
+++ b/docs/03.administer/20.backups/index.mdx
@@ -164,7 +164,7 @@ In many cases, the archive is not on the server on which you want to restore it.
 <Tabs groupId="admin-commands">
   <TabItem value="sftp" label="With a SFTP client">
 
-Currently, the most accessible solution for uploading backups is to use the FileZilla program as explained in [this page](/filezilla).
+Currently, the most accessible solution for uploading backups is to use the FileZilla program as explained in [this page](/administer/tutorials/filezilla).
 
 By default, backups are to be placed in `/home/yunohost.backup/archives/`.
 
