--- a/docs/02.install/40.post_install/15.isp_box_config.mdx
+++ b/docs/02.install/40.post_install/15.isp_box_config.mdx
@@ -1,17 +1,12 @@
 ---
 title: Configure port-forwarding
-template: docs
-taxonomy:
-    category: docs
-routes:
-  default: '/isp_box_config'
-  aliases:
-    - '/port_forwarding'
 ---
+
+import Figure from '@site/src/components/Figures';
 
 If you are self-hosting at home and without a VPN, you need to forward ports on your home router ("Internet box"). The sketch below tries to briefly summarize the role and necessity of port forwarding when setting up a server at home.
 
-[figure caption="Illustration of the importance of port-forwarding"]![](image://portForwarding_en.png)[/figure]
+<Figure caption="Illustration of the importance of port-forwarding" src="/img/portForwarding_en.png" />
 
 ### 0. Diagnose ports opened
 
