--- a/docs/02.install/40.post_install/25.install_on_top_of_debian.mdx
+++ b/docs/02.install/40.post_install/25.install_on_top_of_debian.mdx
@@ -1,12 +1,5 @@
 ---
 title: Installing YunoHost on top of Debian
-template: docs
-taxonomy:
-    category: docs
-routes:
-  default: '/install_on_top_of_debian'
-aliases:
-  - '/installing_debian'
 ---
 
 If you can't install YunoHost successfully using our pre-built image, YunoHost can still be installed on top of a vanilla Debian setup.
@@ -45,4 +38,4 @@ The installer will ask which **desktop environment** you want. We discourage ins
 2. Reboot
 3. Login as `root`
 4. Install curl by typing `apt install curl`
-5. Proceed to install YunoHost on Debian using these instructions: <https://yunohost.org/en/install/hardware:vps_debian>
+5. Proceed to install YunoHost on Debian using [these instructions](https://yunohost.org/en/install/hardware:vps_debian)
