--- a/docs/06.contribute/15.dev/forms.mdx
+++ b/docs/06.contribute/15.dev/forms.mdx
@@ -141,7 +141,9 @@ They are used in app manifests to declare the before installation form and in co
 
 [Have a look at the app config panel doc](/packaging_config_panels) for details about Panels and Sections.
 
-! IMPORTANT: as for Panels and Sections you have to choose an id, but this one should be unique in all this document, even if the question is in an other panel.
+:::warning
+As for Panels and Sections you have to choose an id, but this one should be unique in all this document, even if the question is in an other panel.
+:::
 
 #### Example
 
