move install on top of debian

--- a/docs/02.install/20.install_on/on_top_of_debian.mdx
+++ b/docs/02.install/20.install_on/on_top_of_debian.mdx
@@ -1,5 +1,8 @@
 ---
-title: Installing YunoHost on top of Debian
+title: On top of Debian
+description: If you can't use preinstalled images
+sidebar_custom_props:
+  doc_card_image: /img/icon-debian.png
 ---
 
 If you can't install YunoHost successfully using our pre-built image, YunoHost can still be installed on top of a vanilla Debian setup.
