fix broken links (install)

--- a/docs/02.install/10.providers/10.isp/index.mdx
+++ b/docs/02.install/10.providers/10.isp/index.mdx
@@ -23,7 +23,7 @@ values={[
 <Tabs>
 <TabItem value="ivory" label="Côte d'Ivoire" default>
 
-| Fournisseur d’accès | Box/ routeur | uPnP activable | [Port 25 ouvrable](../../tour/email)| [Hairpinning](http://fr.wikipedia.org/wiki/Hairpinning) | [Reverse DNS](https://en.wikipedia.org/wiki/Reverse_DNS_lookup) | IP fixe |
+| Fournisseur d’accès | Box/ routeur | uPnP activable | [Port 25 ouvrable](/administer/admin_guide/email)| [Hairpinning](http://fr.wikipedia.org/wiki/Hairpinning) | [Reverse DNS](https://en.wikipedia.org/wiki/Reverse_DNS_lookup) | IP fixe |
 | :---: | :---: | :---: | :---: | :---: | :---: | :---: |
 | **Orange** | Livebox2 | oui (activé) | non | **non** | **non** | **non** |
 | **Moov** |  | oui (activé) |  |  |  |  |
@@ -51,7 +51,7 @@ values={[
 <Tabs>
 <TabItem value="belnl" label="Belgium (nl)">
 
-| Service provider | Box/ router | uPnP beschikbaar | [Poort 25 openen mogelijk](../../tour/email)| [Hairpinning](http://fr.wikipedia.org/wiki/Hairpinning) | [Reverse DNS](https://en.wikipedia.org/wiki/Reverse_DNS_lookup) | vaste IP |
+| Service provider | Box/ router | uPnP beschikbaar | [Poort 25 openen mogelijk](/administer/admin_guide/email)| [Hairpinning](http://fr.wikipedia.org/wiki/Hairpinning) | [Reverse DNS](https://en.wikipedia.org/wiki/Reverse_DNS_lookup) | vaste IP |
 | :---: | :---: | :---: | :---: | :---: | :---: | :---: |
 | **Proximus** | BBox2 | ja (geactiveerd) | ja | **nee** | **nee** | **nee** |
 | | BBox3 | ja (geactiveerd) | ja | **nee** | **nee** | **nee** |
@@ -64,7 +64,7 @@ values={[
 </TabItem>
 <TabItem value="belfr" label="Belgium (fr)">
 
-| Fournisseur d’accès | Box/ routeur | uPnP activable | [Port 25 ouvrable](../../tour/email)| [Hairpinning](http://fr.wikipedia.org/wiki/Hairpinning) | [Reverse DNS](https://en.wikipedia.org/wiki/Reverse_DNS_lookup) | IP fixe |
+| Fournisseur d’accès | Box/ routeur | uPnP activable | [Port 25 ouvrable](/administer/admin_guide/email)| [Hairpinning](http://fr.wikipedia.org/wiki/Hairpinning) | [Reverse DNS](https://en.wikipedia.org/wiki/Reverse_DNS_lookup) | IP fixe |
 | :---: | :---: | :---: | :---: | :---: | :---: | :---: |
 | **Proximus** | BBox2 | oui (activé) | oui | **non** | **non** | **non** |
 | | BBox3 | oui (activé) | oui | **non** | **non** | **non** |
@@ -94,7 +94,7 @@ Regulations in Finland prohibit the use of Port 25 for consumers.
 Tous les fournisseurs d’accès à Internet [membres de la Fédération French Data Network](http://www.ffdn.org/fr/membres) ont une politique favorable à l’auto-hébergement.
 :::
 
-| Fournisseur d’accès   | **Box/routeur**          | **[UPnP](https://fr.wikipedia.org/wiki/Universal_Plug_and_Play)** | **[Port 25 ouvrable](../../tour/email)**<br/> | **[Hairpinning](http://fr.wikipedia.org/wiki/Hairpinning)** | **[Reverse DNS](https://en.wikipedia.org/wiki/Reverse_DNS_lookup)<br/>personnalisable ** | **[IP fixe](../../network-setup/dynamicip)**                                       | **[IPv6](https://fr.wikipedia.org/wiki/IPv6)** | **[Non listé sur le DUL](https://en.wikipedia.org/wiki/Dialup_Users_List)** |
+| Fournisseur d’accès   | **Box/routeur**          | **[UPnP](https://fr.wikipedia.org/wiki/Universal_Plug_and_Play)** | **[Port 25 ouvrable](/administer/admin_guide/email)**<br/> | **[Hairpinning](http://fr.wikipedia.org/wiki/Hairpinning)** | **[Reverse DNS](https://en.wikipedia.org/wiki/Reverse_DNS_lookup)<br/>personnalisable ** | **[IP fixe](/administer/tutorials/domains/dns_dynamicip)**                                       | **[IPv6](https://fr.wikipedia.org/wiki/IPv6)** | **[Non listé sur le DUL](https://en.wikipedia.org/wiki/Dialup_Users_List)** |
 |-----------------------|--------------------------|-------------------------------------------------------------------|--------------------------------------------------------|-------------------------------------------------------------|------------------------------------------------------------------------------------------|---------------------------------------------------------------------|------------------------------------------------|-----------------------------------------------------------------------------|
 | OVH                   | Personnel<br/>ou Box OVH | ✔                                                                 | ✔                                   | ✔                                                           | ✔                                                                                        | ✔                                                                   | ✔                                              | …                                                                           |
 | [Free](./free)        | Freebox                  | ✔                                                                 | ✔                                   | ✔                                                           | ✔ (sauf IPv6, pas de support, et buggué sur certaines plages d'adresses ipv4)            | ✔                                                                   | ✔                                              | ✘                                                                           |
