--- a/docs/02.install/40.post_install/20.dns_config.mdx
+++ b/docs/02.install/40.post_install/20.dns_config.mdx
@@ -7,7 +7,7 @@ DNS (domain name system) is a system that converts human-readable addresses
 easily accessible by human beings, and for some services like mail to work
 properly, DNS must be configured.
 
-If you're using an [automatic domain](/dns_nohost_me) provided by the YunoHost Project, the configuration should be
+If you're using an [automatic domain](/administer/tutorials/domains/dns_nohost_me) provided by the YunoHost Project, the configuration should be
 performed automatically. If you're using your own domain name (e.g. bought via
 a registrar), you should manually configure your domain on your registrar's
 interface.
@@ -108,4 +108,4 @@ The diagnosis system available in the webadmin performs this checks automaticall
 
 ### Dynamic IP
 
-If your global IP address is constantly changing, follow this [tutorial](/dns_dynamicip).
+If your global IP address is constantly changing, follow this [tutorial](/administer/tutorials/domains/dns_dynamicip).
