fix broken links (tutorials, troubleshooting and user guide)

--- a/docs/03.administer/45.tutorials/15.filezilla.md
+++ b/docs/03.administer/45.tutorials/15.filezilla.md
@@ -43,7 +43,7 @@ Install the program and run *Filezilla*.
 
    ![view while connected to a remote server](/img/filezilla_6.png)
 
-2. In the right panel, you can browse to `/home/yunohost.backup/archives/` to find [backup archives](/backup).
+2. In the right panel, you can browse to `/home/yunohost.backup/archives/` to find [backup archives](/administer/backups/).
 
    ![path where backups are located on YunoHost](/img/filezilla_7.png)
 
