--- a/docs/03.administer/45.tutorials/55.moving_app_folder.md
+++ b/docs/03.administer/45.tutorials/55.moving_app_folder.md
@@ -8,7 +8,7 @@ Applications folder are (*usually*) located in `/var/www/$appname`
 If an application folder is expected to get bigger because of the amount of data it contains, it might be relevant to move it to another storage (like an external hard drive).
 
 Here's a summary of how to do this the application wordpress. Here, is is assumed that
-[you already mounted the external hard-drive](/external_storage).
+[you already mounted the external hard-drive](/administer/tutorials/external_storage).
 
 #### 1. Move the entire wordpress folder to an external hard drive
 
