--- a/docs/03.administer/45.tutorials/60.security.md
+++ b/docs/03.administer/45.tutorials/60.security.md
@@ -11,11 +11,11 @@ Two things remain important to note:
 - The fact that YunoHost is a well-known and used piece of software increases the chances of an attack. If a flaw is discovered, it could potentially affect all YunoHost instances at once. Keep your system **up-to-date** to remain safe. Updates can be automated by installing the ["Unattended_upgrades" app](https://install-app.yunohost.org/?app=unattended_upgrades).
 
 :::tip
-If you need advice, do not hesitate to [ask us](/help).
+If you need advice, do not hesitate to [ask us](/community/help).
 :::
 
 :::danger
-<FAIcon icon="fa-shield"/> To discuss security flaws, contact the [YunoHost security team](/security_team).
+<FAIcon icon="fa-shield"/> To discuss security flaws, contact the [YunoHost security team](/community/security_team).
 :::
 
 ---
@@ -104,7 +104,7 @@ sudo yunohost settings set security.ssh.ssh_compatibility -v modern
 
 YunoHost administration is accessible through an **HTTP API**, served on the 6787 port by default (only on `localhost`).
 It can be used to administer a lot of things on your server, so malicious actors can also use it to damage your server.
-The best thing to do, if you know how to use the [command-line interface (CLI)](/commandline), is to deactivate the `yunohost-api` service.
+The best thing to do, if you know how to use the [command-line interface (CLI)](/administer/admin_guide/command_line), is to deactivate the `yunohost-api` service.
 
 :::warning
 This will completely disable both YunoHost's API and the web administration panel that relies on it.
