--- a/docs/03.administer/50.troubleshooting/15.noaccess.md
+++ b/docs/03.administer/50.troubleshooting/15.noaccess.md
@@ -12,7 +12,7 @@ This page will help you diagnose the issue, get back access, and if needed repai
 
 Check that you are getting access to the server by using its public IP (you can find at [https://ip.yunohost.org](https://ip.yunohost.org). If this does not work:
 
-- Make sure you have [set up forwarding](/isp_box_config)
+- Make sure you have [set up forwarding](/install/post_install/isp_box_config)
 - Some ISP routers do not support *hairpinning*, which prevents you from reaching your server by its domain name from within your local network. If so, you can use a cellular connection, or tweak your `hosts` file on your computer to make it bind your domain name to the local IP address instead of the public one.
 
 ### Configure DNS records
@@ -21,7 +21,7 @@ Check that you are getting access to the server by using its public IP (you can 
 This is not a problem if you are using a domain from `nohost.me`, `noho.st` or `ynh.fr`)
 :::
 
-You have to configure your [DNS records](/dns_config) (at least `A` records, and `AAAA` if you have an IPv6 connection).
+You have to configure your [DNS records](/install/post_install/dns_config) (at least `A` records, and `AAAA` if you have an IPv6 connection).
 
 You can check that the DNS records are correct by comparing the results given by [this service](https://www.whatsmydns.net/) with the [IP given by our service](https://ip.yunohost.org).
 
@@ -29,13 +29,13 @@ You can check that the DNS records are correct by comparing the results given by
 
 - You domain `noho.st`, `nohost.me`, or `ynh.fr` is unreachable following a failure on YunoHost's infrastructure. Check the [forum](https://forum.yunohost.org/) for announcements or people posting about the same issue.
 - Your domain name may be expired. Check that on your registrar's client panel, or by using the command `whois yourdomain.tld`.
-- You have a dynamic IP address. In that case, you need to set up a script or a client that takes care of regularly update it. Refer to the page on [DNS with a dynamic IP](/dns_dynamicip) to see how. You can also use a domain `nohost.me`, `noho.st` or `ynh.fr` that includes this features.
+- You have a dynamic IP address. In that case, you need to set up a script or a client that takes care of regularly update it. Refer to the page on [DNS with a dynamic IP](/administer/tutorials/domains/dns_dynamicip) to see how. You can also use a domain `nohost.me`, `noho.st` or `ynh.fr` that includes this features.
 
 ## You are getting a certificate error that prevents you from reaching the webadmin
 
 - A certificate error may be displayed if you have made a typo in the address bar of your browser.
 
-- If you have just installed your server, or just installed a new domain, it uses a self-signed certificate. In that case, it is possible and understandable to add a *temporary* security exception so that you can [install a Let's Encrypt certificate](/certificate), provided you have a secure Internet connection.
+- If you have just installed your server, or just installed a new domain, it uses a self-signed certificate. In that case, it is possible and understandable to add a *temporary* security exception so that you can [install a Let's Encrypt certificate](/administer/admin_guide/domains/certificate), provided you have a secure Internet connection.
 
 ## You have access via SSH but not via the webadmin, or inversely
 
@@ -53,7 +53,7 @@ If you have been banned while trying to access a web page, and only web pages ar
 
 If you have been banned from both SSH and webadmin, you can try to reach your server through another IP address. For example through the cellular network of your phone, a VPN, Tor, or another proxy.
 
-See also : [unban an IP on Fail2Ban](/fail2ban)
+See also : [unban an IP on Fail2Ban](/administer/troubleshooting/fail2ban)
 
 :::note
 Ban are usually 10 to 12-minute-long, and on IPv4 only.
@@ -61,7 +61,7 @@ Ban are usually 10 to 12-minute-long, and on IPv4 only.
 
 ### NGINX web server is broken
 
-Maybe the NGINX web server is out of order. You can check that [trough SSH](/ssh) with the command `yunohost service status nginx`. If it is failing, check that its configuration is correct by running `nginx -t`. If it is indeed broken, it may be due to the installation or removal of a low-quality app... If you need support, [ask for it](/help).
+Maybe the NGINX web server is out of order. You can check that [trough SSH](/administer/admin_guide/command_line) with the command `yunohost service status nginx`. If it is failing, check that its configuration is correct by running `nginx -t`. If it is indeed broken, it may be due to the installation or removal of a low-quality app... If you need support, [ask for it](/community/help).
 
 The NGINX or SSH servers may have been killed due to a lack of storage space, RAM, or swap.
 
@@ -84,7 +84,7 @@ If none are working, you need to resolv your connection issue. In some cases, an
 
 ## Webadmin is working, but some web apps are returning 502 errors
 
-It is highly probable that the underlying service for these apps is failing (e.g. PHP apps requiring `php7.0-fpm` or `php7.3-fpm`). You can then try to restart the services, and/or ask for [help](/help)
+It is highly probable that the underlying service for these apps is failing (e.g. PHP apps requiring `php7.0-fpm` or `php7.3-fpm`). You can then try to restart the services, and/or ask for [help](/community/help)
 
 ## You have lost your admin password, or the password is seemingly wrong
 
@@ -92,12 +92,12 @@ If you can reach the webadmin login page (force reload with `CTRL + F5` to be su
 
 If yoy are sure of your passord, it may be due to the `slapd` service failing. If that's the case, log into the server by SSH as `root`.
 
-- If your server is at home, you most likely have access to the local network. From this network, you can follow the [SSH instructions](/ssh)`.
+- If your server is at home, you most likely have access to the local network. From this network, you can follow the [SSH instructions](/administer/admin_guide/command_line)`.
 - If your server is a VPS, your provider may offer a web console.
 
 Once logged in, you have to check the state of the service with `yunohost service status slapd` and/or reset your admin password with `yunohost tools adminpw`.
 
-If this is still failing, on a VPS you may be able to reboot in rescue mode. Do not hesitate to ask for [help](/help)
+If this is still failing, on a VPS you may be able to reboot in rescue mode. Do not hesitate to ask for [help](/community/help)
 
 :::warning
 To be completed
