fix broken links

--- a/docs/05.community/10.chat_rooms.md
+++ b/docs/05.community/10.chat_rooms.md
@@ -14,7 +14,7 @@ You could join those chat rooms using:
 
 #### Help and support chat room
 
-There is a [support](/help) chat room for YunoHost users mutual support and help.
+There is a [support](/community/help) chat room for YunoHost users mutual support and help.
 
 - Matrix: **[`#yunohost:matrix.org`](https://matrix.to/#/#yunohost:matrix.org)**
 - XMPP: **[`support@conference.yunohost.org`](xmpp:support@conference.yunohost.org?join)**
