--- a/docs/06.contribute/05.write_documentation/02.markdown_guide.mdx
+++ b/docs/06.contribute/05.write_documentation/02.markdown_guide.mdx
@@ -69,7 +69,7 @@ It is the same for the documentation pages, except that the link is internal. Th
 ```
 
 The link will return to the page with the correct language setting if the page exists, or defaults to the next available language (French, usually):
-[Wiki page](/write_documentation)
+[Wiki page](/contribute/write_documentation/)
 
 :::tip
 Note that language codes are thus not to be included at the beginning of the links to other documentation pages: `/en`, `/fr`, etc. are superfluous.
