--- a/docs/06.contribute/10.packaging_apps/index.mdx
+++ b/docs/06.contribute/10.packaging_apps/index.mdx
@@ -27,9 +27,9 @@ Before diving in, this documentation assumes that:
 3. You are somewhat familiar with (or are willing to learn) Git;
 4. You are comfortable with tinkering and debugging computer stuff in general.
 
-You are also encouraged to join the [app packaging chatroom](/chat_rooms) to ask any question you may have!
+You are also encouraged to join the [app packaging chatroom](/community/chat_rooms) to ask any question you may have!
 
-At some point, you will also want to have a dev/test environment, either using [VirtualBox](/packaging_apps_virtualbox) or [LXC/ynh-dev](https://github.com/yunohost/ynh-dev) which is meant for the core but can totally be used for developping apps. You can also setup a dev/test VPS on your favourite hosting provider, or even develop on your prod if you like to live dangerously;).
+At some point, you will also want to have a dev/test environment, either using [VirtualBox](/contribute/packaging_apps/resources/packaging_apps_virtualbox) or [LXC/ynh-dev](https://github.com/yunohost/ynh-dev) which is meant for the core but can totally be used for developping apps. You can also setup a dev/test VPS on your favourite hosting provider, or even develop on your prod if you like to live dangerously;).
 
 ## 3. Notes about the history of YunoHost's app packaging
 
