--- a/docs/06.contribute/15.dev/index.mdx
+++ b/docs/06.contribute/15.dev/index.mdx
@@ -9,7 +9,7 @@ contribution process.
 If you're looking for stuff to implement or fix, the bug-tracker is
 [here](https://github.com/YunoHost/issues/issues)!
 
-**Come say hi to us in the [dev chat room](/chat_rooms)**!
+**Come say hi to us in the [dev chat room](/community/chat_rooms)**!
 
 ### Setting up a development environment
 
