--- a/docs/06.contribute/index.mdx
+++ b/docs/06.contribute/index.mdx
@@ -13,7 +13,7 @@ title: Contribute to YunoHost
   </Column>
 
   <Column className='text--center'>
-    Talk about software freedom, [self-hosting](/selfhosting) and YunoHost to your relatives and at your work. We rely on Datalove evangelists like you \<3
+    Talk about software freedom, [self-hosting](/overview/self_hosting) and YunoHost to your relatives and at your work. We rely on Datalove evangelists like you \<3
   </Column>
 </Columns>
 
@@ -25,7 +25,7 @@ title: Contribute to YunoHost
   </Column>
 
   <Column className='text--center'>
-  Our support relies on contributors like you. Just come to [the support chatroom](/help) and help new users getting started, or pick a question on the <a href="https://forum.yunohost.org/" target="_blank">Forum</a>.
+  Our support relies on contributors like you. Just come to [the support chatroom](/community/help) and help new users getting started, or pick a question on the <a href="https://forum.yunohost.org/" target="_blank">Forum</a>.
   </Column>
 </Columns>
 
@@ -37,7 +37,7 @@ title: Contribute to YunoHost
   </Column>
 
   <Column className='text--center'>
-  Improve this documentation by [writing new pages](/write_documentation) or translating existing ones to your language.
+  Improve this documentation by [writing new pages](/contribute/write_documentation/) or translating existing ones to your language.
   </Column>
 </Columns>
 
@@ -74,8 +74,8 @@ title: Contribute to YunoHost
   </Column>
 
   <Column className='text--center'>
-    Extend YunoHost capabilities by [packaging new services and web applications](/packaging_apps).  
-    Have a look of [what has been done yet](/apps)!
+    Extend YunoHost capabilities by [packaging new services and web applications](/contribute/packaging_apps/).  
+    Have a look of [what has been done yet](https://apps.yunohost.org/)!
   </Column>
 </Columns>
 
@@ -89,6 +89,6 @@ title: Contribute to YunoHost
   <Column className='text--center'>
     You can involve in the YunoHost's development regardless of your skill.
     Sysadmins, web developers, designers and pythonists <a href="https://github.com/YunoHost" target="_blank">are welcome</a>!  
-    Learn [how to contribute](/dev), and join us on the [development chat room](xmpp:dev@conference.yunohost.org?join).
+    Learn [how to contribute](/contribute/dev/), and join us on the [development chat room](xmpp:dev@conference.yunohost.org?join).
   </Column>
 </Columns> 
