--- a/docs/05.community/20.faq.md
+++ b/docs/05.community/20.faq.md
@@ -24,7 +24,7 @@ YunoHost is a distribution, in the sense that it is a purpose-specific version o
 
 For instance, if you wanted to install WordPress, you would need to type a bunch of commands to create some users, setup a web server, setup a SQL server, download the WordPress archive, uncompress it, configure the web server, configure the SQL database, and finally configure WordPress. YunoHost handles the technical details and "types all these commands for you", so that you can focus on what really matters.
 
-More info on [this page](/whatsyunohost)!
+More info on [this page](/overview/what_is_yunohost)!
 
 #### Can I host my own personal website with YunoHost?
 
@@ -36,7 +36,7 @@ Yes! YunoHost is multi-user and multi-domain. Some applications like *WordPress*
 
 #### Why can't I access applications via the IP address?
 
-The [SSO](https://github.com/Kloadut/SSOwat/) (single sign-on) cannot properly authenticate users when they access your server with only its IP. If you really can't properly configure the DNS, you can temporarily work around it by [modifying the `hosts` file (last §)](/dns_local_network) on your computer.
+The [SSO](https://github.com/Kloadut/SSOwat/) (single sign-on) cannot properly authenticate users when they access your server with only its IP. If you really can't properly configure the DNS, you can temporarily work around it by [modifying the `hosts` file](/administer/tutorials/domains/dns_local_network#configure-hosts-file-on-client-workstation) on your computer.
 
 #### What's YunoHost's business model?
 
@@ -62,7 +62,7 @@ A common misconception for newcomers in free software projects is to think that 
 
 #### How is the YunoHost project organized?
 
-It is described in [this document](/project_organization) :).
+It is described in [this document](https://github.com/YunoHost/project-organization/) :).
 
 #### Will you port YunoHost to [insert favorite distro]?
 
@@ -88,7 +88,7 @@ If you really want to have a feature implemented or documented, or an app packag
 
 #### What is YunoHost's policy regarding the apps included in the official catalog ?
 
-See [this page](/packaging_policy)
+See [this page](/contribute/packaging_apps/policy)
 
 #### Why won't you include [feature X] ?
 
