fix broken links

--- a/docs/06.contribute/index.mdx
+++ b/docs/06.contribute/index.mdx
@@ -15,7 +15,7 @@ import Link from '@docusaurus/Link';
   </Column>
 
   <Column className='text--center'>
-    Talk about software freedom, [self-hosting](/selfhosting) and YunoHost to your relatives and at your work. We rely on Datalove evangelists like you \<3
+    Talk about software freedom, [self-hosting](/overview/self_hosting) and YunoHost to your relatives and at your work. We rely on Datalove evangelists like you \<3
   </Column>
 </Columns>
 
@@ -39,7 +39,7 @@ import Link from '@docusaurus/Link';
   </Column>
 
   <Column className='text--center'>
-  Improve this documentation by [writing new pages](/write_documentation) or translating existing ones to your language.
+  Improve this documentation by [writing new pages](/contribute/write_documentation/) or translating existing ones to your language.
   </Column>
 </Columns>
 
@@ -76,8 +76,8 @@ import Link from '@docusaurus/Link';
   </Column>
 
   <Column className='text--center'>
-    Extend YunoHost capabilities by [packaging new services and web applications](/packaging_apps).  
-    Have a look of [what has been done yet](/apps)!
+    Extend YunoHost capabilities by [packaging new services and web applications](/contribute/packaging_apps/).  
+    Have a look of [what has been done yet](https://apps.yunohost.org/)!
   </Column>
 </Columns>
 
