fix broken links

--- a/docs/06.contribute/index.mdx
+++ b/docs/06.contribute/index.mdx
@@ -91,6 +91,6 @@ import Link from '@docusaurus/Link';
   <Column className='text--center'>
     You can involve in the YunoHost's development regardless of your skill.
     Sysadmins, web developers, designers and pythonists <Link to="https://github.com/YunoHost" target="_blank">are welcome</Link>!  
-    Learn [how to contribute](/dev), and join us on the [development chat room](xmpp:dev@conference.yunohost.org?join).
+    Learn [how to contribute](/contribute/dev/), and join us on the [development chat room](xmpp:dev@conference.yunohost.org?join).
   </Column>
 </Columns> 
