fix broken links (end)

--- a/docs/06.contribute/05.write_documentation/02.markdown_guide.mdx
+++ b/docs/06.contribute/05.write_documentation/02.markdown_guide.mdx
@@ -67,7 +67,7 @@ will be displayed as such:
 It is the same for the documentation pages, except that the link is internal. The page name is its default route, as defined in its page header:
 
 ```markdown
-[Wiki Page](/contribute/write_documentation/)
+[Wiki Page](/contribute/contribute/write_documentation//)
 ```
 
 The link will return to the page with the correct language setting if the page exists, or defaults to the next available language (French, usually):
@@ -115,6 +115,7 @@ It is possible to make a link with an image, for example:
 
 ```markdown
 [![YunoHost Logo](/img/logo.png)](/contribute/write_documentation/)
+[![YunoHost Logo](/img/logo.png)](/contribute/write_documentation/)
 ```
 
 [![YunoHost Logo](/img/logo.png)](/contribute/write_documentation/)
@@ -143,6 +144,7 @@ Will be displayed:
 
 ## Lists
 
+Lists allow to display a series of texts in an easy presentation, this is how indexes such as the [contributing documentation](/contribute/) page are written.
 Lists allow to display a series of texts in an easy presentation, this is how indexes such as the [contributing documentation](/contribute/) page are written.
 
 ### Ordered lists
